# zero2prod

./: Cargo.toml  settings.yml
migrations/: 20230220142347_create_example_table.sql
scripts/: init_postgres.sh
src/: lib.rs  main.rs  settings.rs  startup.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs
