[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Fernando Azevedo <azevedo.fma@gmail.com>"]
edition = "2021"

[dependencies]
axum = { version = "0.6.7", features = ["ws"] }
hyper = "0.14.24"
tokio = { version = "1.25.0", features = ["full"] }
tower = "0.4.13"

[dev-dependencies]
reqwest = "0.11.14"
