[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Fernando Azevedo <azevedo.fma@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = { version = "0.6.7", features = ["ws"] }
config = "0.13.3"
hyper = "0.14.24"
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", default-features = false, features = [
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "runtime-tokio-rustls",
] }
tokio = { version = "1.25.0", features = ["full"] }
tower = "0.4.13"

[dev-dependencies]
reqwest = "0.11.14"
